# Matt-DESTROYER

./: .gitignore  README.md  package-lock.json
.vercel/: project.json
auth/: Cargo.toml
auth/src/: db.rs  handlers.rs  main.rs  models.rs
main/: Cargo.toml
main/src/: main.rs
main/src/public/: 404.html  about.html  contact.html  home.html  nav.json  projects.html  socials.json
main/src/public/Modules/: default.js  footer.js  header.js  socket.js
main/src/public/Styles/: Theme.css
main/src/static/: 404.html  about.html  contact.html  home.html  projects.html  socials.json
main/src/static/Modules/: anchor.js  default.js  footer.js  header.js
main/src/static/Styles/: Theme.css
projects/: Cargo.toml
projects/src/: main.rs
src/: README.md  index.mjs  package-lock.json  package.json  websockets.js  websockets.mjs
src/projects/: index.mjs
src/projects/static/: projects.html
src/projects/static/solar-system/: index.html  main.js
src/public/: 404.html  about.html  contact.html  home.html  languages.json  nav.json  projects.html  projects.json  socials.json  socket.js
src/public/Modules/: footer.js
src/public/Styles/: Theme.css
static-api/: Cargo.toml
static-api/src/: main.rs
static-api/src/static/: nav.json  socials.json
